--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,7 @@ ul {
   background-size: auto;
   background-repeat: no-repeat;
   background-position: left 0 top 120px;
+  overflow: hidden;
   color: #fff;
 }
 
@@ -309,6 +310,7 @@ ul {
   width: calc(100% / 12 * 6 - var(--gutter) * 2);
   margin-right: var(--gutter);
   margin-left: var(--gutter);
+  
 }
 
 @media (max-width: 920px) {
@@ -337,13 +339,61 @@ ul {
   background-image: url(../img/promo/part1.svg);
   width: 105%;
   left: -25px;
+  animation-name: rotating1;
+  animation-iteration-count: infinite;
+  animation-duration: 40s;
 }
 
 .promo__bg-block::after {
   background-image: url(../img/promo/part2.svg);
+  animation-name: rotating2;
+  animation-iteration-count: infinite;
+  animation-duration: 30s;
 }
 
 .promo__phone-img {
   position: relative;
   z-index: 2;
+  animation-name: slidein;
+  animation-duration: 2.5s;
+}
+
+@keyframes rotating1 {
+  0% {
+    transform: translate(0, -50%);
+  }
+  
+  50% {
+    transform: translate(0, -50%) rotate(1turn) scale(1.2);
+  }
+  
+  100% {
+    transform: translate(0, -50%);
+  }
+}
+
+@keyframes rotating2 {
+  0% {
+    transform: translate(0, -50%);
+  }
+  
+  50% {
+    transform: translate(0, -50%) rotate(1turn);
+  }
+  
+  100% {
+    transform: translate(0, -50%);
+  }
+}
+
+@keyframes slidein {
+  from {
+    transform: translate(0, -20%);
+    opacity: 0;
+  }
+
+  to {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
