--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ ul {
   border-radius: 5px;
   border: none;
   appearance: none;
+  cursor: pointer;
 }
 
 .btn_prime {
@@ -929,6 +930,7 @@ ul {
   padding-top: 100px;
   padding-bottom: 100px;
   background: var(--dark-background-color);
+  overflow: hidden;
 }
 
 @media (max-width: 560px) {
@@ -1129,6 +1131,10 @@ ul {
 
 .form-el__input:focus {
   border-color: #777171;
+}
+
+.form-el__input.error {
+  border-color: red;
 }
 
 .form-el__select {
