--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,18 @@
   --dark-background-color: #252b42;
   --primary-color: #23a6f0;
   --grey: #737373;
+  --text-color: #fff;
+}
+
+html[data-mode='light'] {
+  --dark-background-color: #f1f1f1;
+  --primary-color: #46b1f0;
+  --grey: #c4c4c4;
+  --text-color: #252b42;
+}
+
+html[data-mode='light'] img {
+  opacity: 0.7;
 }
 
 body {
@@ -137,7 +149,7 @@ ul {
 .s-title {
   font-weight: bold;
   font-size: 40px;
-  color: #fff;
+  color: var(--text-color);
   max-width: 455px;
   text-align: center;
 }
@@ -146,7 +158,7 @@ ul {
   font-weight: 500;
   font-size: 14px;
   max-width: 470px;
-  color: #fff;
+  color: var(--text-color);
   text-align: center;
 }
 
@@ -248,13 +260,15 @@ ul {
 }
 
 .header__item-link {
-  color: #fff;
+  color: var(--text-color);
   font-weight: 600;
   font-size: 14px;
   text-decoration: none;
 }
 
 .header__customer-area {
+  display: flex;
+  align-items: center;
 }
 
 @media (max-width: 920px) {
@@ -263,10 +277,14 @@ ul {
   }
 }
 
+.header__theme-switch {
+  margin-right: 15px;
+}
+
 .header__login-link {
   font-weight: bold;
   font-size: 14px;
-  color: #fff;
+  color: var(--text-color);
   text-decoration: none;
   margin-right: 45px;
 }
@@ -308,7 +326,7 @@ ul {
   background-repeat: no-repeat;
   background-position: left 0 top 120px;
   overflow: hidden;
-  color: #fff;
+  color: var(--text-color);
 }
 
 @media (max-width: 560px) {
@@ -494,7 +512,7 @@ ul {
   background: var(--dark-background-color);
   padding-top: 140px;
   padding-bottom: 10px;
-  color: #fff;
+  color: var(--text-color);
 }
 
 @media (max-width: 920px) {
@@ -543,7 +561,7 @@ ul {
 .plus-card {
   position: relative;
   width: calc(100% / 12 * 4 - var(--gutter) * 2);
-  color: #fff;
+  color: var(--text-color);
   border: 1px solid #f2f2f2;
   padding-top: 35px;
   padding-bottom: 35px;
@@ -631,7 +649,7 @@ ul {
 /* review-card  */
 
 .review-card {
-  background: #fff;
+  background: var(--text-color);
   padding: 40px;
   text-align: center;
 }
@@ -735,7 +753,7 @@ ul {
   padding-top: 18px;
   padding-right: 28px;
   padding-bottom: 18px;
-  color: #fff;
+  color: var(--text-color);
   border-radius: 10px;
   background: var(--dark-background-color);
 }
@@ -848,7 +866,7 @@ ul {
   border: 1px solid #23a6f0;
   box-sizing: border-box;
   border-radius: 10px;
-  background: #fff;
+  background: var(--text-color);
   padding: 50px;
 }
 
@@ -1200,7 +1218,7 @@ ul {
   margin-left: var(--gutter);
   margin-right: var(--gutter);
   width: calc(100% / 12 * 3 - var(--gutter) * 2);
-  color: #fff;
+  color: var(--text-color);
 }
 @media (max-width: 768px) {
   .footer__column {
@@ -1255,7 +1273,7 @@ ul {
   margin-bottom: 0;
 }
 .footer__menu-link {
-  color: #fff;
+  color: var(--text-color);
   font-weight: 600;
   font-size: 14px;
   text-decoration: none;
@@ -1279,6 +1297,67 @@ ul {
   .footer__copyright br {
     display: block;
   }
+}
+
+/* custom switcher */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 
